CI: Fix that coverage report is uploaded even if it is disabled

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,4 +55,4 @@ script:
   - scripts/travis.sh
 
 after_success:
-  - if [ -n "$COVERAGE" ]; then bash <(curl -s https://codecov.io/bash); fi
+  - if [ "$COVERAGE" == "ON ]; then bash <(curl -s https://codecov.io/bash); fi
