--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,12 @@ matrix:
       env: PLATFORM=mac COVERAGE=ON
     - os: osx
       osx_image: xcode9
-      env: PLATFORM=ios MATRIX_EVAL="unset CC; unset CXX"
+      language: objective-c
+      env: PLATFORM=ios
     - os: osx
       osx_image: xcode8.3
-      env: PLATFORM=ios MATRIC_EVAL="unset CC; unset CXX"
+      language: objective-c
+      env: PLATFORM=ios
 
     - os: linux
       env: PLATFORM=linux COVERAGE=ON MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
