CI: Upgrade cmake in linux ci container

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ before_install:
 
 install:
   - pip install --user plumbum clint requests
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./scripts/install_cmake.sh; export PATH=`pwd`/deps/cmake/bin:$PATH; cmake --version; fi
 
 before_script:
   - scripts/travis_check_deps.sh
