FIX: Fix that cmake failed to add test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,7 +20,7 @@ function(add_mem_test name)
     message(STATUS "Adding valgrind test for ${name}.")
     set(MEMCHECK_PARAMS ${CTEST_MEMORYCHECK_COMMAND} ${CTEST_MEMORYCHECK_COMMAND_OPTIONS} $<TARGET_FILE:${name}>)
     add_test(NAME ${name} COMMAND ${MEMCHECK_PARAMS})
-  elseif()
+  else()
     message(STATUS "Adding test for ${name}.")
     add_test(${name} ${name})
   endif()
