CI: Set up coverage for sonarcloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,6 @@ sonar.organization=zhuhaow-github
 sonar.sources=.
 sonar.exclusions=deps/**, build/**
 sonar.cfamily.build-wrapper-output=bw-output
-sonar.cfamily.gcov.reportsPath=.
+sonar.cfamily.gcov.reportsPath=coverage
 
 sonar.host.url=https://sonarcloud.io
