--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ set(SOURCES
   src/instance.cc
   src/transport/socks5_listener.cc
   src/crypto/random.cc
+  src/crypto/key_generator.cc
   )
 
 cmake_policy(SET CMP0063 NEW)
