FEAT: Add shadowsocks error code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ set(SOURCES
   src/instance.cc
   src/transport/socks5_listener.cc
   src/stream_coder/shadowsocks_stream_coder.cc
+  src/stream_coder/shadowsocks_stream_coder_error.cc
   src/transport/server_adapter.cc
   src/crypto/random.cc
   src/crypto/key_generator.cc
