FEAT: Add regex rule to match domain

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ set(SOURCES
   src/rule/dns_fail_rule.cc
   src/rule/geo_rule.cc
   src/rule/domain_rule.cc
+  src/rule/domain_regex_rule.cc
   src/transport/direct_adapter.cc
   src/instance.cc
   src/transport/socks5_listener.cc
