--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,7 @@ set(SOURCES
   src/rule/geo_rule.cc
   src/rule/domain_rule.cc
   src/rule/domain_regex_rule.cc
+  src/rule/subnet_rule.cc
   src/transport/direct_adapter.cc
   src/instance.cc
   src/transport/socks5_listener.cc
