FEAT: Add `HttpServerStreamCoder` for HTTP proxy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ add_definitions(-DBOOST_ASIO_DISABLE_HANDLER_TYPE_REQUIREMENTS)
 set(SOURCES
   src/stream_coder/stream_coder_pipe.cc
   src/stream_coder/socks5_server_stream_coder.cc
+  src/stream_coder/http_server_stream_coder.cc
   src/stream_coder/direct_stream_coder.cc
   src/transport/tcp_socket.cc
   src/transport/tcp_listener.cc
