FIX: Ignore `modules` folder in sonar analyze

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=me.zhuhaow.libnekit
 sonar.organization=zhuhaow-github
 
 sonar.sources=.
-sonar.exclusions=deps/**, build/**
+sonar.exclusions=deps/**, build/**, modules/**
 sonar.cfamily.build-wrapper-output=bw-output
 sonar.cfamily.gcov.reportsPath=coverage
 
