--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,8 @@ before_install:
   - eval "${MATRIX_EVAL}"
 
 install:
-  - pip install --user plumbum clint requests
+  - pip install pipenv
+  - pipenv install
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./scripts/install_cmake.sh; export PATH=`pwd`/deps/cmake/bin:$PATH; cmake --version; fi
 
 before_script:
