--- a/.travis.yml
+++ b/.travis.yml
@@ -80,9 +80,10 @@ matrix:
 
 before_install:
   - eval "${MATRIX_EVAL}"
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew install pipenv; fi
 
 install:
-  - pip install pipenv
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then pip install --user pipenv; fi
   - pipenv install
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./scripts/install_cmake.sh; export PATH=`pwd`/deps/cmake/bin:$PATH; cmake --version; fi
 
