FIX: Make sure brew headers do not appear before self build deps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ set(CMAKE_FIND_ROOT_PATH "${PROJECT_SOURCE_DIR}/deps/${PLATFORM}")
 if(APPLE AND NOT IOS)
   execute_process(COMMAND scripts/find_include_path.sh WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} OUTPUT_VARIABLE INCLUDE_DIRS)
   string(REPLACE "\n" ";" INCLUDE_DIRS ${INCLUDE_DIRS})
-  include_directories(${INCLUDE_DIRS})
+  include_directories(AFTER SYSTEM ${INCLUDE_DIRS})
   message(STATUS "Added more include dirs for apple clang")
 endif()
 
