CI: Update Sonar project key

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectName=libnekit
-sonar.projectKey=me.zhuhaow.libnekit
+sonar.projectKey=me.zhuhaow.libnekit:dev
 sonar.organization=zhuhaow-github
 
 sonar.sources=.
