--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,9 @@ if(COVERAGE)
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
 endif()
 
+target_compile_options(nekit PRIVATE $<$<CONFIG:DEBUG>:-g -O0>)
+target_compile_options(nekit PRIVATE $<$<CONFIG:RELEASE>:-O3>)
+
 target_include_directories(nekit PUBLIC "include")
 target_include_directories(nekit PRIVATE "modules")
 target_include_directories(nekit SYSTEM PUBLIC "deps/${PLATFORM}/include")
