--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ target_sources(nekit PRIVATE
   src/data_flow/socks5_server_data_flow.cc
   src/data_flow/http_server_data_flow.cc
   src/data_flow/http_data_flow.cc
+  src/data_flow/socks5_data_flow.cc
   src/data_flow/speed_data_flow.cc
   modules/http_parser/http_parser.c
   )
