FIX: Add missing OpenSSL library in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,11 +109,17 @@ if(NOT BOOST)
 endif()
 set(LIBS ${LIBS} ${BOOST})
 
-find_library(OPENSSL crypto NO_SYSTEM_ENVIROMENT_PATH)
-if(NOT OPENSSL)
+find_library(OPENSSL_CRYPTO crypto NO_SYSTEM_ENVIROMENT_PATH)
+if(NOT OPENSSL_CRYPTO)
   message(FATAL_ERROR "OpenSSL not found. Build dependency first.")
 endif()
-set(LIBS ${LIBS} ${OPENSSL})
+set(LIBS ${LIBS} ${OPENSSL_CRYPTO})
+
+find_library(OPENSSL_SSL ssl NO_SYSTEM_ENVIROMENT_PATH)
+if(NOT OPENSSL_SSL)
+  message(FATAL_ERROR "OpenSSL not found. Build dependency first.")
+endif()
+set(LIBS ${LIBS} ${OPENSSL_SSL})
 
 find_library(SODIUM sodium NO_SYSTEM_ENVIROMENT_PATH)
 if(NOT SODIUM)
