FIX: Fix that dependencies for iOS are not found as only root is searched

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,31 +103,31 @@ if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/contrib" AND IS_DIRECTORY "${CMAKE_CURREN
   add_subdirectory("contrib")
 endif()
 
-find_library(BOOST boost)
+find_library(BOOST boost NO_SYSTEM_ENVIRONMENT_PATH CMAKE_FIND_ROOT_PATH_BOTH)
 if(NOT BOOST)
   message(FATAL_ERROR "Boost not found. Build dependency first.")
 endif()
 set(LIBS ${LIBS} ${BOOST})
 
-find_library(OPENSSL_CRYPTO crypto)
+find_library(OPENSSL_CRYPTO crypto NO_SYSTEM_ENVIRONMENT_PATH CMAKE_FIND_ROOT_PATH_BOTH)
 if(NOT OPENSSL_CRYPTO)
   message(FATAL_ERROR "OpenSSL not found. Build dependency first.")
 endif()
 set(LIBS ${LIBS} ${OPENSSL_CRYPTO})
 
-find_library(OPENSSL_SSL ssl)
+find_library(OPENSSL_SSL ssl NO_SYSTEM_ENVIRONMENT_PATH CMAKE_FIND_ROOT_PATH_BOTH)
 if(NOT OPENSSL_SSL)
   message(FATAL_ERROR "OpenSSL not found. Build dependency first.")
 endif()
 set(LIBS ${LIBS} ${OPENSSL_SSL})
 
-find_library(SODIUM sodium)
+find_library(SODIUM sodium NO_SYSTEM_ENVIRONMENT_PATH CMAKE_FIND_ROOT_PATH_BOTH)
 if(NOT SODIUM)
   message(FATAL_ERROR "libsodium not found. Build dependency first.")
 endif()
 set(LIBS ${LIBS} ${SODIUM})
 
-find_library(MAXMINDDB maxminddb)
+find_library(MAXMINDDB maxminddb NO_SYSTEM_ENVIRONMENT_PATH CMAKE_FIND_ROOT_PATH_BOTH)
 if(NOT MAXMINDDB)
   message(FATAL_ERROR "maxminddb not found. Build dependency first.")
 endif()
