--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,15 +24,15 @@ before_build:
   - pipenv run scripts/build_deps.py windows
 
 build_script:
-  - cmake . -DCMAKE_TOOLCHAIN_FILE=cmake/toolchain/win.cmake -DCOVERAGE=ON -DPLATFORM=win -A x64
-  - cmake --build .
+  - cmake . -DCMAKE_TOOLCHAIN_FILE=cmake/toolchain/win.cmake -DCOVERAGE=OFF -DPLATFORM=win -A x64
+  - cmake --build . --config release
 
 before_test:
-  - choco install codecov
+  # - choco install codecov
 
 test_script:
   - ctest
-  - codecov -f .
+  # - codecov -f .
 
 cache:
   - deps -> scripts/build_deps.py, appveyor.yml
