--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,8 @@ matrix:
     - <<: *osx_default
       osx_image: xcode9.1
     - <<: *osx_default
+      osx_image: xcode9
+    - <<: *osx_default
       osx_image: xcode8.3
 
     - <<: *ios_default
@@ -67,6 +69,8 @@ matrix:
       osx_image: xcode9.2
     - <<: *ios_default
       osx_image: xcode9.1
+    - <<: *ios_default
+      osx_image: xcode9
     - <<: *ios_default
       osx_image: xcode8.3
 
